objects/amc__Rates__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Control various rates for default values.</description>
    <fields>
        <fullName>amc__Accrual__c</fullName>
        <inlineHelpText>Identifies the percentage of the Holiday Allowance that can be accrued</inlineHelpText>
        <label>Accrual %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Per_Day__c</fullName>
        <inlineHelpText>Used in various project rate calculations.  If not supplied, will default to 8</inlineHelpText>
        <label>Hours Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Read_Only_Site__c</fullName>
        <inlineHelpText>Reference to the Force.com site that is used for the Read Only Page.</inlineHelpText>
        <label>Read Only Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rates</label>
</CustomObject>